# inn-smsp-registry

./: .env.example  .gitignore  README.md  compose.yaml  enrich_with_region.py  inn_registry_checker.py  load_msp.py  pyproject.toml  requirements.txt  sample_input.csv  sample_registry.xml  structure-10062025.xsd
input/: input.csv
